[package]
name = "mls-client"
version = "0.1.0"
authors = ["Wire <opensource@wire.com>"]

[dependencies]
reqwest = "0.9.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rustyline = "2.1"
names = "0.11.0"

# The underlying MLS algorithm implementation
[dependencies.melissa]
git = "https://github.com/wireapp/melissa"
rev = "041ab48a0199a3c118f9aff23fd2cdb129e986d9"

# Using a fork that:
#
#   * allows exceptions
#   * allows printing result values
[dependencies.rhai]
git = "https://github.com/neongreen/rhai"
rev = "d2b2ba994d5054db2b8e207dbb95b6acec2e993c"
