[package]
name = "mls-client"
version = "0.1.0"
authors = ["Wire <opensource@wire.com>"]

[dependencies]
reqwest = "0.9.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rustyline = "2.1"
names = "0.11.0"
config = "0.9"

# The underlying MLS algorithm implementation
[dependencies.melissa]
git = "https://github.com/wireapp/melissa"
rev = "e7d47fdce53e8256233f6808323c70ae5fc0f528"

# Using a fork that:
#
#   * allows exceptions
#   * allows printing result values
[dependencies.rhai]
git = "https://github.com/neongreen/rhai"
rev = "d2b2ba994d5054db2b8e207dbb95b6acec2e993c"
