[package]
name = "mls-client"
version = "0.1.0"
authors = ["Wire <opensource@wire.com>"]

[dependencies]
reqwest = "0.9.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rustyline = "6.0.0"
names = "0.11.0"
config = "0.9"
rhai = "0.9.1"

# The underlying MLS algorithm implementation
[dependencies.melissa]
path = "../melissa"
#git = "https://github.com/wireapp/melissa"
#rev = "e7d47fdce53e8256233f6808323c70ae5fc0f528"


